// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="page-actions display-flex-center"
>
  <span
    className="note nowrap"
  >
    <span
      className="big-spacer-right"
    >
      <span
        className="shortcut-button little-spacer-right"
      >
        ↑
      </span>
      <span
        className="shortcut-button little-spacer-right"
      >
        ↓
      </span>
      component_measures.to_select_files
    </span>
    <span>
      <span
        className="shortcut-button little-spacer-right"
      >
        ←
      </span>
      <span
        className="shortcut-button little-spacer-right"
      >
        →
      </span>
      component_measures.to_navigate
    </span>
  </span>
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="page-actions display-flex-center"
>
  <span
    className="note nowrap"
  >
    <span
      className="big-spacer-right"
    >
      <span
        className="shortcut-button little-spacer-right"
      >
        ↑
      </span>
      <span
        className="shortcut-button little-spacer-right"
      >
        ↓
      </span>
      component_measures.to_select_files
    </span>
    <span>
      <span
        className="shortcut-button little-spacer-right"
      >
        ←
      </span>
      <span
        className="shortcut-button little-spacer-right"
      >
        →
      </span>
      component_measures.to_navigate
    </span>
  </span>
  <div
    className="nowrap"
  >
    <FilesCounter
      className="big-spacer-left"
      total={10}
    />
  </div>
</div>
`;

exports[`should render correctly 3`] = `
<div
  className="page-actions display-flex-center"
>
  <div
    className="nowrap"
  >
    <FilesCounter
      className="big-spacer-left"
      current={12}
      total={120}
    />
  </div>
</div>
`;
